--- a/apteka/index.html
+++ b/apteka/index.html
@@ -52,8 +52,8 @@
 						<div class="slider__slide">
 							<div class="slider__column">
 								<div class="slider__img">
-									<img src="../img/banner/01.png">
-									<img class="blur-img" src="../img/banner/01_1.png">
+									<img src="img/banner/01.png">
+									<img class="blur-img" src="img/banner/01_1.png">
 								</div>
 							</div>
 							<div class="slider__column">
