--- a/apteka/index.html
+++ b/apteka/index.html
@@ -13,7 +13,7 @@
 			<div class="container">
 				<div class="header__body">
 					<div class="header__logo">
-						<a href="#"><img src="img/header/logo.png"></a>
+						<a href="#"><img src="img/header/logo.png" alt=""></a>
 						<span>Online Store Theme</span>
 					</div>
 					<div class="header__search">
@@ -52,8 +52,8 @@
 						<div class="slider__slide">
 							<div class="slider__column">
 								<div class="slider__img">
-									<img src="img/banner/01.png">
-									<img class="blur-img" src="img/banner/01_1.png">
+									<img src="../img/banner/01.png" alt="">
+									<img class="blur-img" src="../img/banner/01_1.png" alt="">
 								</div>
 							</div>
 							<div class="slider__column">
@@ -80,7 +80,7 @@
 					<div class="banner__main-categories">
 						<div class="banner__category category">
 							<div class="category__img">
-								<img src="img/banner/category_1.png">
+								<img src="img/banner/category_1.png" alt="">
 							</div>
 							<div class="category__text">
 								Best price <span>this week</span>
@@ -88,7 +88,7 @@
 						</div>
 						<div class="banner__category category">
 							<div class="category__img">
-								<img src="img/banner/category_2.png">
+								<img src="img/banner/category_2.png" alt="">
 							</div>
 							<div class="category__text">
 								New smells <span>in the next series</span>
@@ -96,7 +96,7 @@
 						</div>
 						<div class="banner__category category">
 							<div class="category__img">
-								<img src="img/banner/category_3.png">
+								<img src="img/banner/category_3.png" alt="">
 							</div>
 							<div class="category__text">
 								Only natural <span>air fresheners</span>
@@ -119,7 +119,7 @@
 					<div class="showcase__slide">
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -130,22 +130,22 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png"  alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -156,22 +156,22 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -182,21 +182,21 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
-							<div class="product__img">
+							<div class="product__img" alt="">
 								<img src="img/showcase/01.png">
 							</div>
 							<div class="product__label">
@@ -208,17 +208,17 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 					<div class="showcase__slide">
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -249,22 +249,22 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -275,22 +275,22 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -301,22 +301,22 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 						<div class="showcase__item product">
 							<div class="product__img">
-								<img src="img/showcase/01.png">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
@@ -327,17 +327,17 @@
 									<span>$725.00</span>
 								</div>
 								<div class="product__settings">
-									<img src="img/showcase/settings.png">
+									<img src="img/showcase/settings.png" alt="">
 								</div>
 								<div class="product__like">
-									<img src="img/showcase/like.png">
+									<img src="img/showcase/like.png" alt="">
 								</div>
 								<div class="product__add-basket">
-									<img src="img/showcase/add_basket.png">
+									<img src="img/showcase/add_basket.png" alt="">
 								</div>
 							</div>
 							<div class="product__sale">
-								<img src="img/showcase/sale.png">
+								<img src="img/showcase/sale.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -396,7 +396,7 @@
 						</div>
 						<div class="information__message">
 							<div class="information__letter-img">
-								<img src="img/information/letter.png">
+								<img src="img/information/letter.png" alt="">
 							</div>
 							<div class="information__letter-text">
 								Vel lobortis gravida. Cursus in dapibus ultrices velit fusce. Felis lacus erat.
@@ -417,15 +417,15 @@
 							<ul>
 								<li>
 									49 Archdale, 2B Charleston
-									<img src="img/footer/pin.png">
+									<img src="img/footer/pin.png" alt="">
 								</li>
 								<li>
 									+777 (100) 1234
-									<img src="img/footer/phone.png">
+									<img src="img/footer/phone.png" alt="">
 								</li>
 								<li>
 									mail@example.com
-									<img src="img/footer/email.png">
+									<img src="img/footer/email.png" alt="">
 								</li>
 							</ul>
 						</div>
@@ -473,5 +473,7 @@
 			</div>
 		</footer>
 	</div>
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="js/script.js"></script> -->
 </body>
 </html>
