--- a/apteka/index.html
+++ b/apteka/index.html
@@ -196,8 +196,8 @@
 							</div>
 						</div>
 						<div class="showcase__item product">
-							<div class="product__img" alt="">
-								<img src="img/showcase/01.png">
+							<div class="product__img">
+								<img src="img/showcase/01.png" alt="">
 							</div>
 							<div class="product__label">
 								Febreze Air Effects New Zealand Springs
