--- a/apteka/index.html
+++ b/apteka/index.html
@@ -52,7 +52,7 @@
 						<div class="slider__slide">
 							<div class="slider__column">
 								<div class="slider__img">
-									<img src="../img/banner/01.png" alt="">
+									<img src="img/banner/01.png" alt="">
 									<img class="blur-img" src="../img/banner/01_1.png" alt="">
 								</div>
 							</div>
