--- a/apteka/index.html
+++ b/apteka/index.html
@@ -53,7 +53,7 @@
 							<div class="slider__column">
 								<div class="slider__img">
 									<img src="img/banner/01.png" alt="">
-									<img class="blur-img" src="../img/banner/01_1.png" alt="">
+									<img class="blur-img" src="img/banner/01_1.png" alt="">
 								</div>
 							</div>
 							<div class="slider__column">
