--- a/4. Apteka42/index.html
+++ b/4. Apteka42/index.html
@@ -42,7 +42,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="cart.php" class="header__cart">
+                    <a href="cart.html" class="header__cart">
                         <span class="_hide"></span>
                         <img src="images/1.header/2.cart.svg" alt="Cart">
                         Корзина
