--- a/4. Apteka42/index.html
+++ b/4. Apteka42/index.html
@@ -19,7 +19,7 @@
         <header class="header">
             <div class="header__body _container">
                 <div class="header__top">
-                    <a href="/4. Apteka42/" class="header__logo"><img src="images/1.header/1.logo.png" alt="logo"></a>
+                    <a href="/incerto/4. Apteka42/" class="header__logo"><img src="images/1.header/1.logo.png" alt="logo"></a>
                     <a href="tel:+79502786300" class="header__tel">8 (800) 555 35-35</a>
                     <div class="header__search">
                         <div class="header__search-input">
@@ -76,22 +76,22 @@
                         <div id="tab_1" class="aside__block _active">
                             <nav class="aside__nav">
                                 <ul>
-                                                                            <li><a href="categories.php?parent_category=1" class="aside__link">Базовый уход</a></li>
-                                                                            <li><a href="categories.php?parent_category=2" class="aside__link">Профессиональная косметика</a></li>
-                                                                            <li><a href="categories.php?parent_category=3" class="aside__link">Витамины и добавки</a></li>
-                                                                            <li><a href="categories.php?parent_category=4" class="aside__link">Болезни сустовов</a></li>
-                                                                            <li><a href="categories.php?parent_category=5" class="aside__link">Зрение</a></li>
+                                                                            <li><a href="#" class="aside__link">Базовый уход</a></li>
+                                                                            <li><a href="#" class="aside__link">Профессиональная косметика</a></li>
+                                                                            <li><a href="#" class="aside__link">Витамины и добавки</a></li>
+                                                                            <li><a href="#" class="aside__link">Болезни сустовов</a></li>
+                                                                            <li><a href="#" class="aside__link">Зрение</a></li>
                                                                     </ul>
                             </nav>
                         </div>
                         <div id="tab_2" class="aside__block">
                             <nav class="aside__nav">
                                 <ul>
-                                                                            <li><a href="products.php?type=1" class="aside__link">Лекарственные средства</a></li>
-                                                                            <li><a href="products.php?type=2" class="aside__link">БАДы</a></li>
-                                                                            <li><a href="products.php?type=3" class="aside__link">Медицинские товары и техника</a></li>
-                                                                            <li><a href="products.php?type=4" class="aside__link">Медицинские изделия и контактные линзы</a></li>
-                                                                            <li><a href="products.php?type=5" class="aside__link">Детские товары</a></li>
+                                                                            <li><a href="#" class="aside__link">Лекарственные средства</a></li>
+                                                                            <li><a href="#" class="aside__link">БАДы</a></li>
+                                                                            <li><a href="#" class="aside__link">Медицинские товары и техника</a></li>
+                                                                            <li><a href="#" class="aside__link">Медицинские изделия и контактные линзы</a></li>
+                                                                            <li><a href="#" class="aside__link">Детские товары</a></li>
                                                                     </ul>
                             </nav>
                         </div>
