--- a/4. Apteka42/cart.html
+++ b/4. Apteka42/cart.html
@@ -19,7 +19,7 @@
         <header class="header">
             <div class="header__body _container">
                 <div class="header__top">
-                    <a href="/4. Apteka42/" class="header__logo"><img src="images/1.header/1.logo.png" alt="logo"></a>
+                    <a href="/incerto/4. Apteka42/" class="header__logo"><img src="images/1.header/1.logo.png" alt="logo"></a>
                     <a href="tel:+79502786300" class="header__tel">8 (800) 555 35-35</a>
                     <div class="header__search">
                         <div class="header__search-input">
